# dotFun

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod
ast/: expr.cpp  stmt.cpp
cli/: main.cpp
cmd/dotFun/: main.go
include/dotFun/ast/: ast_base.h  expr.h  stmt.h
include/dotFun/interpreter/: environment.h  interpreter.h  value.h
include/dotFun/lexer/: lexer.h  token.h  tokens.h
include/dotFun/parser/: parser.h
internal/ast/: expr.go  stmt.go  types.go  visitor.go
internal/lexer/: lexer.go  token.go
interpreter/: environment.cpp  value.cpp
lexer/: lexer.cpp
parser/: parser.cpp
